--- a/1.ingestion data into bronze.ipynb
+++ b/1.ingestion data into bronze.ipynb
@@ -7,7 +7,69 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "5b706e00-9a02-492c-8343-397ade2e1d6f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "DROP "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "872da8c3-8d22-4206-96ea-530487efbad5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.csv(\n",
+    "    path=\"dbfs:/FileStore/michelin/users_000_A.csv\",header =True , inferSchema=True\n",
+    ").write.mode(\"overwrite\").saveAsTable(\"micheline058155.newschema.users_bronze\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "59fa75d7-3fc7-4b41-b0ed-e0edd6f3433f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.table(\"micheline058155.newschema.users\").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "91aaee81-d192-4a40-a942-e82dbae3367c",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
