--- a/databricks-demo/01.Ingestion data into bronze.ipynb
+++ b/databricks-demo/01.Ingestion data into bronze.ipynb
@@ -7,10 +7,11 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "34960367-aa49-4d5c-b270-15af9ffa3847",
+     "nuid": "debfd9f5-97bd-41fc-a767-6d202d79d53f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -18,9 +19,10 @@
    },
    "outputs": [],
    "source": [
+    "%sql\n",
     "\n",
-    "bronze_table = \"micheline058155.newschema.users_bronze\"\n",
-    "silver_table = \"micheline058155.newschema.users_silver\""
+    "DROP TABLE quickstart_catalog.quickstart_schema.users_bronze;\n",
+    "DROP TABLE quickstart_catalog.quickstart_schema.users_silver;"
    ]
   },
   {
@@ -33,7 +35,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bb4ecc8b-4743-4e8f-ab72-2f4d063efc4c",
+     "nuid": "4dfe5329-f345-4a38-a97a-ff496dba34c8",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -41,7 +43,9 @@
    },
    "outputs": [],
    "source": [
-    "spark.read.table(bronze_table).write.mode(\"overwrite\").saveAsTable(silver_table)"
+    "spark.read.csv(\n",
+    "    path=\"dbfs:/FileStore/michelin/users_000_c.csv\", header=True, inferSchema=True\n",
+    ").write.mode(\"overwrite\").saveAsTable(\"quickstart_catalog.quickstart_schema.users_bronze\")"
    ]
   },
   {
@@ -54,7 +58,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "0b42eb56-4056-4f7b-8fd6-f743f47c1d8d",
+     "nuid": "85a39e8d-10fd-4eca-bc64-d7c75142d69f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -62,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "spark.read.table(silver_table).display()"
+    "spark.read.table(\"quickstart_catalog.quickstart_schema.users_bronze\").display()"
    ]
   },
   {
@@ -72,20 +76,14 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "086f5999-c2f6-42de-afc8-ae2aecc8be09",
+     "nuid": "35691998-d993-4cca-85ca-1571934f2d75",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
-   "source": [
-    "%sql\n",
-    "MERGE INTO micheline058155.newschema.users_silver silver_users\n",
-    "USING micheline058155.newschema.users_bronze bronze_silver\n",
-    "ON silver_users.id = bronze_silver.id\n",
-    "WHEN NOT MATCHED THEN INSERT *"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -99,9 +97,15 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 3251610951849208,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
-   "notebookName": "02. Ingest data into silver",
+   "notebookName": "01.Ingestion data into bronze",
    "widgets": {}
   },
   "language_info": {
