--- a/databricks-demo/03. Ingest data into gold.ipynb
+++ b/databricks-demo/03. Ingest data into gold.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "34960367-aa49-4d5c-b270-15af9ffa3847",
+     "nuid": "b27b452a-4b7a-41d9-be88-712a768a1aa2",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -18,9 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "bronze_table = \"micheline058155.newschema.users_bronze\"\n",
-    "silver_table = \"micheline058155.newschema.users_silver\""
+    "silver_table = \"quickstart_catalog.quickstart_schema.users_silver\"\n",
+    "gold_table = \"quickstart_catalog.quickstart_schema.users_gold\""
    ]
   },
   {
@@ -33,7 +32,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bb4ecc8b-4743-4e8f-ab72-2f4d063efc4c",
+     "nuid": "f8428040-2019-4cce-acf6-0cf72d35da49",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -41,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "spark.read.table(bronze_table).write.mode(\"overwrite\").saveAsTable(silver_table)"
+    "spark.read.table(silver_table).groupBy(\"country\").count().write.mode(\"overwrite\").saveAsTable(gold_table)"
    ]
   },
   {
@@ -54,7 +53,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "0b42eb56-4056-4f7b-8fd6-f743f47c1d8d",
+     "nuid": "692bd411-fcde-43c5-ad9b-bc6ff87a0a8b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -62,29 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "spark.read.table(silver_table).display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "086f5999-c2f6-42de-afc8-ae2aecc8be09",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "MERGE INTO micheline058155.newschema.users_silver silver_users\n",
-    "USING micheline058155.newschema.users_bronze bronze_silver\n",
-    "ON silver_users.id = bronze_silver.id\n",
-    "WHEN NOT MATCHED THEN INSERT *"
+    "spark.read.table(gold_table).display()"
    ]
   }
  ],
@@ -101,7 +78,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "02. Ingest data into silver",
+   "notebookName": "03. Ingest data into gold",
    "widgets": {}
   },
   "language_info": {
